--- a/package.json
+++ b/package.json
@@ -3,22 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.36",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
+    "@popperjs/core": "^2.11.6",
     "clsx": "^1.1.1",
-    "react": "^17.0.2",
-    "react-click-away-listener": "^2.0.5",
-    "react-dom": "^17.0.2",
-    "react-popper": "^2.2.5",
+    "firebase": "^9.12.1",
+    "react": "^18.2.0",
+    "react-click-away-listener": "^2.2.2",
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-loading": "^2.0.3",
+    "react-popper": "^2.3.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "4.0.3",
-    "recoil": "^0.5.0",
-    "typescript": "^4.4.4",
+    "recoil": "^0.7.6",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -27,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "atomic-css": "atomizer -r atomizer.rules.js -c 'atomizer.config.js' -o 'src/styles/scss/atomic.style.scss' -w './src/**/*.tsx'",
+    "atomic-css": "atomizer -c 'atomizer.config.js' -o 'src/styles/scss/atomic.style.scss' -w './src/**/*.tsx'",
     "gen_icon": "fantasticon ./src/assets/fonts/font-icon/icon-src -o ./src/assets/fonts/font-icon --normalize"
   },
   "eslintConfig": {
@@ -49,8 +45,17 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.3",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.1",
+    "atomizer": "^3.21.2",
     "fantasticon": "^1.2.3",
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "typescript": "^4.8.4"
   }
 }
