--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@popperjs/core": "^2.11.6",
     "clsx": "^1.1.1",
     "firebase": "^9.12.1",
@@ -13,15 +14,15 @@
     "react-loading": "^2.0.3",
     "react-popper": "^2.3.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "recoil": "^0.7.6",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "atomic-css": "atomizer -c 'atomizer.config.js' -o 'src/styles/scss/atomic.style.scss' -w './src/**/*.tsx'",
     "gen_icon": "fantasticon ./src/assets/fonts/font-icon/icon-src -o ./src/assets/fonts/font-icon --normalize"
