--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@popperjs/core": "^2.11.6",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@recoiljs/refine": "^0.1.1",
     "clsx": "^1.1.1",
     "firebase": "^9.12.1",
     "react": "^18.2.0",
@@ -16,6 +18,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "recoil": "^0.7.6",
+    "recoil-sync": "^0.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
